; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/btrfs/extr_orphan.c_btrfs_del_orphan_item.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/btrfs/extr_orphan.c_btrfs_del_orphan_item.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.btrfs_trans_handle = type { i32 }
%struct.btrfs_root = type { i32 }
%struct.btrfs_path = type { i32 }
%struct.btrfs_key = type { i32, i32 }

@BTRFS_ORPHAN_OBJECTID = common dso_local global i32 0, align 4
@BTRFS_ORPHAN_ITEM_KEY = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@ENOENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @btrfs_del_orphan_item(%struct.btrfs_trans_handle* %0, %struct.btrfs_root* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.btrfs_trans_handle*, align 8
  %6 = alloca %struct.btrfs_root*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.btrfs_path*, align 8
  %9 = alloca %struct.btrfs_key, align 4
  %10 = alloca i32, align 4
  store %struct.btrfs_trans_handle* %0, %struct.btrfs_trans_handle** %5, align 8
  store %struct.btrfs_root* %1, %struct.btrfs_root** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 0, i32* %10, align 4
  %11 = load i32, i32* @BTRFS_ORPHAN_OBJECTID, align 4
  %12 = getelementptr inbounds %struct.btrfs_key, %struct.btrfs_key* %9, i32 0, i32 1
  store i32 %11, i32* %12, align 4
  %13 = load i32, i32* @BTRFS_ORPHAN_ITEM_KEY, align 4
  %14 = call i32 @btrfs_set_key_type(%struct.btrfs_key* %9, i32 %13)
  %15 = load i32, i32* %7, align 4
  %16 = getelementptr inbounds %struct.btrfs_key, %struct.btrfs_key* %9, i32 0, i32 0
  store i32 %15, i32* %16, align 4
  %17 = call %struct.btrfs_path* (...) @btrfs_alloc_path()
  store %struct.btrfs_path* %17, %struct.btrfs_path** %8, align 8
  %18 = load %struct.btrfs_path*, %struct.btrfs_path** %8, align 8
  %19 = icmp ne %struct.btrfs_path* %18, null
  br i1 %19, label %23, label %20

20:                                               ; preds = %3
  %21 = load i32, i32* @ENOMEM, align 4
  %22 = sub nsw i32 0, %21
  store i32 %22, i32* %4, align 4
  br label %46

23:                                               ; preds = %3
  %24 = load %struct.btrfs_trans_handle*, %struct.btrfs_trans_handle** %5, align 8
  %25 = load %struct.btrfs_root*, %struct.btrfs_root** %6, align 8
  %26 = load %struct.btrfs_path*, %struct.btrfs_path** %8, align 8
  %27 = call i32 @btrfs_search_slot(%struct.btrfs_trans_handle* %24, %struct.btrfs_root* %25, %struct.btrfs_key* %9, %struct.btrfs_path* %26, i32 -1, i32 1)
  store i32 %27, i32* %10, align 4
  %28 = load i32, i32* %10, align 4
  %29 = icmp slt i32 %28, 0
  br i1 %29, label %30, label %31

30:                                               ; preds = %23
  br label %42

31:                                               ; preds = %23
  %32 = load i32, i32* %10, align 4
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %37

34:                                               ; preds = %31
  %35 = load i32, i32* @ENOENT, align 4
  %36 = sub nsw i32 0, %35
  store i32 %36, i32* %10, align 4
  br label %42

37:                                               ; preds = %31
  %38 = load %struct.btrfs_trans_handle*, %struct.btrfs_trans_handle** %5, align 8
  %39 = load %struct.btrfs_root*, %struct.btrfs_root** %6, align 8
  %40 = load %struct.btrfs_path*, %struct.btrfs_path** %8, align 8
  %41 = call i32 @btrfs_del_item(%struct.btrfs_trans_handle* %38, %struct.btrfs_root* %39, %struct.btrfs_path* %40)
  store i32 %41, i32* %10, align 4
  br label %42

42:                                               ; preds = %37, %34, %30
  %43 = load %struct.btrfs_path*, %struct.btrfs_path** %8, align 8
  %44 = call i32 @btrfs_free_path(%struct.btrfs_path* %43)
  %45 = load i32, i32* %10, align 4
  store i32 %45, i32* %4, align 4
  br label %46

46:                                               ; preds = %42, %20
  %47 = load i32, i32* %4, align 4
  ret i32 %47
}

declare dso_local i32 @btrfs_set_key_type(%struct.btrfs_key*, i32) #1

declare dso_local %struct.btrfs_path* @btrfs_alloc_path(...) #1

declare dso_local i32 @btrfs_search_slot(%struct.btrfs_trans_handle*, %struct.btrfs_root*, %struct.btrfs_key*, %struct.btrfs_path*, i32, i32) #1

declare dso_local i32 @btrfs_del_item(%struct.btrfs_trans_handle*, %struct.btrfs_root*, %struct.btrfs_path*) #1

declare dso_local i32 @btrfs_free_path(%struct.btrfs_path*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
